--- a/CMS/CMS.Web/Views/Notifications/IndexGMnotification.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/IndexGMnotification.cshtml
@@ -11,10 +11,10 @@
             <div class="card-body">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="unread-tab" data-bs-toggle="tab" data-bs-target="#unread" type="button" role="tab" aria-controls="unread" aria-selected="true">Unread</button>
+                        <button class="nav-link active" id="unread-tab" data-bs-toggle="tab" data-bs-target="#unread" type="button" role="tab" aria-controls="unread" aria-selected="true">UnRead</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="all-tab" data-bs-toggle="tab" data-bs-target="#all" type="button" role="tab" aria-controls="all" aria-selected="false">All</button>
+                        <button class="nav-link" id="read-tab" data-bs-toggle="tab" data-bs-target="#read" type="button" role="tab" aria-controls="read" aria-selected="false">Read</button>
                     </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
@@ -63,7 +63,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="tab-pane fade" id="all" role="tabpanel" aria-labelledby="all-tab">
+                    <div class="tab-pane fade" id="read" role="tabpanel" aria-labelledby="read-tab">
                         <table id="add-rows" class="table" style="width:100%">
                             <thead>
                                 <tr>
@@ -76,7 +76,7 @@
 
                                 </tr>
                             </thead>
-                            <tbody id="all-notifications-content">
+                            <tbody id="read-notifications-content">
                                 @if (Model.Count() == 0)
                                 {
                                     <tr>
@@ -129,22 +129,22 @@
 <script>
     $(document).ready(function () {
 
-        $("#all-tab").click(function () {
+        $("#read-tab").click(function () {
             $.ajax({
                 url: '@Url.Action("AllNotifications", "Notifications")',
                 type: 'GET',
                 success: function (response) {
                     var tBodyContent = "";
-                    $('#all-notifications-content').html("");
+                    $('#read-notifications-content').html("");
                     // Delay the reload for 2 seconds (adjust as needed)
+                    response.reverse();
                     response.forEach(notification => {
-                        debugger;
                         var fontStyle = notification.isRead ? "color: blue;" : "font-weight: bold; color: black;";
                         var sendDate = new Date(notification.sendDate);
                         var formattedDate = sendDate.toLocaleDateString();
                         var formattedTime = sendDate.toLocaleTimeString();
 
-                        // Prepare the all notifications grid body content
+                        // Prepare the read notifications grid body content
                         var htmlCode = tBodyContent;
                         tBodyContent = htmlCode.concat(`<tr>
                                                       <td>
@@ -158,16 +158,16 @@
                                                   </tr>`)
                     })
 
-                    $('#all-notifications-content').html(tBodyContent);
+                    $('#read-notifications-content').html(tBodyContent);
 
                 },
                 error: function (xhr, status, error) {
-                    console.error("Error marking all as read: " + error);
+                    console.error("Error to load read notifications: " + error);
 
                     // Show SweetAlert2 error notification
                     Swal.fire({
                         title: 'Error!',
-                        text: 'Failed to load all notifications.',
+                        text: 'Failed to load read notifications.',
                         icon: 'error',
                         confirmButtonText: 'OK'
                     });
