--- a/CMS/CMS.Web/Views/Notifications/IndexInterviewernotification.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/IndexInterviewernotification.cshtml
@@ -11,18 +11,14 @@
             <div class="card-body">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="unread-tab" data-bs-toggle="tab" data-bs-target="#unread" type="button" role="tab" aria-controls="unread" aria-selected="true">Unread</button>
+                        <button class="nav-link active" id="unread-tab" data-bs-toggle="tab" data-bs-target="#unread" type="button" role="tab" aria-controls="unread" aria-selected="true">UnRead</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="all-tab" data-bs-toggle="tab" data-bs-target="#all" type="button" role="tab" aria-controls="all" aria-selected="false">All</button>
+                        <button class="nav-link" id="read-tab" data-bs-toggle="tab" data-bs-target="#read" type="button" role="tab" aria-controls="read" aria-selected="false">Read</button>
                     </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active" id="unread" role="tabpanel" aria-labelledby="unread-tab">
-                        <div class="mt-3 mb-3">
-                            <button class="btn btn-primary" id="readAllButton">Mark as Read</button>
-                        </div>
-
                         <table id="add-rows" class="table" style="width:100%">
                             <thead>
                                 <tr>
@@ -67,7 +63,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="tab-pane fade" id="all" role="tabpanel" aria-labelledby="all-tab">
+                    <div class="tab-pane fade" id="read" role="tabpanel" aria-labelledby="read-tab">
                         <table id="add-rows" class="table" style="width:100%">
                             <thead>
                                 <tr>
@@ -80,7 +76,7 @@
 
                                 </tr>
                             </thead>
-                            <tbody id="all-notifications-content">
+                            <tbody id="read-notifications-content">
                                 @if (Model.Count() == 0)
                                 {
                                     <tr>
@@ -132,50 +128,17 @@
 
 <script>
     $(document).ready(function () {
-        $("#readAllButton").click(function () {
-            $.ajax({
-                url: '@Url.Action("MarkAllAsRead", "Notifications")',
-                type: 'POST',
-                success: function () {
-                    // Show SweetAlert2 success notification without a timer
-                    Swal.fire({
-                        title: 'Success!',
-                        text: 'All notifications marked as read successfully.',
-                        icon: 'success',
-                        confirmButtonText: 'OK',
-                        timer: null // or remove this line
-                    });
 
-                    // Delay the reload for 2 seconds (adjust as needed)
-                    setTimeout(function () {
-                        // Reload the page or update the table as needed
-                        location.reload();
-                    }, 3000); // 1000 milliseconds = 1 seconds
-                },
-                error: function (xhr, status, error) {
-                    console.error("Error marking all as read: " + error);
-
-                    // Show SweetAlert2 error notification
-                    Swal.fire({
-                        title: 'Error!',
-                        text: 'Failed to mark all notifications as read.',
-                        icon: 'error',
-                        confirmButtonText: 'OK'
-                    });
-                }
-            });
-        });
-
-        $("#all-tab").click(function () {
+        $("#read-tab").click(function () {
             $.ajax({
                 url: '@Url.Action("IndexInterviewerForAllNotification", "Notifications")',
                 type: 'GET',
                 success: function (response) {
                     var tBodyContent = "";
-                    $('#all-notifications-content').html("");
+                    $('#read-notifications-content').html("");
                     // Delay the reload for 2 seconds (adjust as needed)
+                    response.reverse();
                     response.forEach(notification => {
-                        debugger;
                         var fontStyle = notification.isRead ? "color: blue;" : "font-weight: bold; color: black;";
                         var sendDate = new Date(notification.sendDate);
                         var formattedDate = sendDate.toLocaleDateString();
@@ -195,16 +158,16 @@
                                                       </tr>`)
                     })
 
-                    $('#all-notifications-content').html(tBodyContent);
+                    $('#read-notifications-content').html(tBodyContent);
 
                 },
                 error: function (xhr, status, error) {
-                    console.error("Error marking all as read: " + error);
+                    console.error("Error to load read notifications: " + error);
 
                     // Show SweetAlert2 error notification
                     Swal.fire({
                         title: 'Error!',
-                        text: 'Failed to load all notifications.',
+                        text: 'Failed to load read notifications.',
                         icon: 'error',
                         confirmButtonText: 'OK'
                     });
